--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-source-filesystem": "^1.5.35",
     "gatsby-transformer-remark": "^1.7.40",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-media-player": "^0.7.1"
   },
   "scripts": {
     "build": "gatsby build",
