--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-source-filesystem": "^1.5.35",
     "gatsby-transformer-remark": "^1.7.40",
+    "gatsby-transformer-yaml": "^1.5.17",
     "react-helmet": "^5.2.0",
     "react-media-player": "^0.7.1",
     "react-motion-ui-pack": "^0.10.3"
