--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "gatsby-plugin-feed": "^1.3.21",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-sharp": "^1.6.44",
     "gatsby-source-filesystem": "^1.5.35",
     "gatsby-transformer-remark": "^1.7.40",
+    "gatsby-transformer-sharp": "^1.6.24",
     "gatsby-transformer-yaml": "^1.5.17",
     "react-helmet": "^5.2.0",
     "react-media-player": "^0.7.1",
