Add maxmellon's speaker information

--- a/src/data/speakers.yaml
+++ b/src/data/speakers.yaml
@@ -13,3 +13,8 @@
   imageUrl: https://pbs.twimg.com/profile_images/778199219580510208/jUC2xEF6_400x400.jpg
   twitter: yuki2006_kd
   github: yuki2006
+- id: maxmellon
+  name: MaxMEllon
+  imageUrl: https://pbs.twimg.com/profile_images/927610018949513216/hOfV3qUb_400x400.jpg
+  twitter: maxmellon_9039
+  github: maxmellon
